[gd_scene load_steps=6 format=3 uid="uid://dmg2owqfft8wx"]

[ext_resource type="Script" path="res://scenes/menu/Mainmenu/mainmenu.gd" id="1_4cy0x"]
[ext_resource type="Texture2D" uid="uid://c62pkmbwkmgy5" path="res://assets/MM_Background.jpg" id="1_uu3xo"]
[ext_resource type="FontFile" uid="uid://cp3471nbxsu7j" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_xgbdt"]
[ext_resource type="FontFile" uid="uid://chvclfb0c4ccl" path="res://assets/fonts/PixelOperator8.ttf" id="3_55d5l"]
[ext_resource type="Texture2D" uid="uid://co30e8yoh5x61" path="res://assets/fonts/dragonfruit-icon.png" id="4_r72fp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4cy0x")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_uu3xo")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 67

[node name="Title" type="Label" parent="CanvasLayer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.829781, 0.000543492, 0.829775, 1)
theme_override_fonts/font = ExtResource("2_xgbdt")
theme_override_font_sizes/font_size = 70
text = "Jump'n Run"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.5
offset_top = -108.5
offset_right = 283.5
offset_bottom = 108.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameStartButton" type="Button" parent="CanvasLayer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0784314, 0.25098, 1, 1)
theme_override_colors/font_color = Color(0.968587, 5.67943e-06, 7.70092e-07, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_55d5l")
theme_override_font_sizes/font_size = 50
text = "Spiel starten"
icon = ExtResource("4_r72fp")

[node name="SettingsButton" type="Button" parent="CanvasLayer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0784314, 0.25098, 1, 1)
theme_override_colors/font_color = Color(0.968587, 5.67943e-06, 7.70092e-07, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_55d5l")
theme_override_font_sizes/font_size = 50
text = "Einstellungen"
icon = ExtResource("4_r72fp")

[node name="QuitButton" type="Button" parent="CanvasLayer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0784314, 0.25098, 1, 1)
theme_override_colors/font_color = Color(0.968587, 5.67943e-06, 7.70092e-07, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_55d5l")
theme_override_font_sizes/font_size = 50
text = "Spiel beenden"
icon = ExtResource("4_r72fp")

[connection signal="pressed" from="CanvasLayer2/VBoxContainer/GameStartButton" to="." method="gamestart_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/VBoxContainer/QuitButton" to="." method="quit_button_pressed"]
